--- a/components/header.html
+++ b/components/header.html
@@ -36,7 +36,18 @@
                 <li><a href="about.html" data-i18n="aboutUs">About</a></li>
                 <li><a href="index.html#products" data-i18n="products">Products</a></li>
                 <li><a href="how-to-use.html" data-i18n="howToUse">How to Use</a></li>
-                <li><a href="articles.html" data-i18n="articles">Articles</a></li>
+                <li class="nav-dropdown">
+                    <a href="#" data-i18n="resources">Resources <i class="fas fa-chevron-down"></i></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="faq.html" data-i18n="faqNav">FAQ</a></li>
+                        <li><a href="care-guide.html" data-i18n="careGuideNav">Care Guide</a></li>
+                        <li><a href="skin-concerns.html" data-i18n="skinConcernsNav">Skin Concerns</a></li>
+                        <li><a href="ingredients.html" data-i18n="ingredientsNav">Ingredients</a></li>
+                        <li><a href="results-gallery.html" data-i18n="resultsNav">Results Gallery</a></li>
+                        <li><a href="training.html" data-i18n="academyNav">Academy</a></li>
+                        <li><a href="articles.html" data-i18n="articles">Articles</a></li>
+                    </ul>
+                </li>
                 <li><a href="videos.html" data-i18n="videos">Videos</a></li>
                 <li><a href="register.html" class="btn btn-outline" data-i18n="register">B2B Register</a></li>
             </ul>
@@ -58,7 +69,18 @@
         <a href="about.html" data-i18n="aboutUs">About</a>
         <a href="index.html#products" data-i18n="products">Products</a>
         <a href="how-to-use.html" data-i18n="howToUse">How to Use</a>
-        <a href="articles.html" data-i18n="articles">Articles</a>
+        <div class="mobile-submenu">
+            <a href="#" class="submenu-toggle" data-i18n="resources">Resources <i class="fas fa-chevron-down"></i></a>
+            <div class="submenu-items">
+                <a href="faq.html" data-i18n="faqNav">FAQ</a>
+                <a href="care-guide.html" data-i18n="careGuideNav">Care Guide</a>
+                <a href="skin-concerns.html" data-i18n="skinConcernsNav">Skin Concerns</a>
+                <a href="ingredients.html" data-i18n="ingredientsNav">Ingredients</a>
+                <a href="results-gallery.html" data-i18n="resultsNav">Results Gallery</a>
+                <a href="training.html" data-i18n="academyNav">Academy</a>
+                <a href="articles.html" data-i18n="articles">Articles</a>
+            </div>
+        </div>
         <a href="videos.html" data-i18n="videos">Videos</a>
         <a href="register.html" data-i18n="register">B2B Register</a>
     </div>
