Add footer links and convert Arabic translations to feminine form

--- a/components/footer.html
+++ b/components/footer.html
@@ -25,10 +25,12 @@
             <div class="footer-col">
                 <h4 data-i18n="contactUs">Contact Us</h4>
                 <ul class="footer-links">
-                    <li><i class="fas fa-envelope"></i> <a href="mailto:info@dermocéan.com">info@dermocéan.com</a>
+                    <li><i class="fas fa-envelope"></i> <a href="mailto:info@dermocean.com">info@dermocean.com</a>
                     </li>
-                    <li><i class="fas fa-phone"></i> +90 545 533 6663</li>
-                    <li><i class="fab fa-instagram"></i> @dermoceanofficial</li>
+                    <li><i class="fas fa-phone"></i> <a href="tel:+905455336663" dir="ltr"
+                            style="unicode-bidi: embed;">+90 545 533 6663</a></li>
+                    <li><i class="fab fa-instagram"></i> <a href="https://instagram.com/dermoceanofficial"
+                            target="_blank">@dermoceanofficial</a></li>
                 </ul>
             </div>
         </div>
