feat: Add Natural Philosophy page with animations, translations, and ingredient images

--- a/components/header.html
+++ b/components/header.html
@@ -39,6 +39,7 @@
                 <li class="nav-dropdown">
                     <a href="#" data-i18n="resources">Resources <i class="fas fa-chevron-down"></i></a>
                     <ul class="dropdown-menu">
+                        <li><a href="natural-philosophy.html" data-i18n="naturalPhilosophy">Natural Philosophy</a></li>
                         <li><a href="faq.html" data-i18n="faqNav">FAQ</a></li>
                         <li><a href="care-guide.html" data-i18n="careGuideNav">Care Guide</a></li>
                         <li><a href="skin-concerns.html" data-i18n="skinConcernsNav">Skin Concerns</a></li>
@@ -72,6 +73,7 @@
         <div class="mobile-submenu">
             <a href="#" class="submenu-toggle" data-i18n="resources">Resources <i class="fas fa-chevron-down"></i></a>
             <div class="submenu-items">
+                <a href="natural-philosophy.html" data-i18n="naturalPhilosophy">Natural Philosophy</a>
                 <a href="faq.html" data-i18n="faqNav">FAQ</a>
                 <a href="care-guide.html" data-i18n="careGuideNav">Care Guide</a>
                 <a href="skin-concerns.html" data-i18n="skinConcernsNav">Skin Concerns</a>
